updating site on 2022年 3月18日 星期五 20时19分26秒 CST

--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ posts = "/posts/:year/:month/:day/:slug/"
     url = "/en/about/"
     weight = 2
 [[menu.en]]
-    name = "Posts"
+    name = "APAD"
     url = "/en/posts/"
     weight = 3
 [[menu.en]]
